# LSM-Tree-Haskell

./: .travis.yml  CHANGELOG.md  LSM-Tree-Haskell.cabal  README.md
app/: Main.hs
src/: LSMTreeHaskell.hs  LsmTree.hs
src/LSM/: Tree.hs
test/: LsmTreeSpec.hs  Spec.hs
